3D Viewport does not show textures in "Texture" shading mode #36632

Closed
opened 2013-09-02 09:25:12 +02:00 by Alexander N. · 8 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7 64bit,

- Blender version with error, and version that worked ---

2.66a, 2.67b, 2.68a ... blender-2.68-r59724M-win64.zip - with issue

- Short description of error ---

when i switch the 3D Viewport to "Texture" shading while the render engine is on "Cycles Render", i can not see textures.
when i am in "Blender Render" or "Blender Game" render engine mode, i can see the textures.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

(watch the attached video...)

  1. open attached blend file.
  2. be sure, you are on "Cycles Render" render engine mode
  3. switch the 3D viewport to "Texture" vieport shading mode.
  4. you see, the mode doesn't show up any textures.

when you change to "Blender Render" or "Blender Game" and redo the steps, at point 4. you can see the textures of every object.
%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit, - Blender version with error, and version that worked --- 2.66a, 2.67b, 2.68a ... blender-2.68-r59724M-win64.zip - with issue - Short description of error --- when i switch the 3D Viewport to "Texture" shading while the render engine is on "Cycles Render", i can not see textures. when i am in "Blender Render" or "Blender Game" render engine mode, i can see the textures. - Steps for others to reproduce the error (preferably based on attached .blend file) --- (watch the attached video...) 1. open attached blend file. 2. be sure, you are on "Cycles Render" render engine mode 3. switch the 3D viewport to "Texture" vieport shading mode. 4. you see, the mode doesn't show up any textures. when you change to "Blender Render" or "Blender Game" and redo the steps, at point 4. you can see the textures of every object. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%For Cycles it uses image texture nodes from the material. The texture shown is the active image texture node, which you can set in the node editor by clicking on that node.
http://wiki.blender.org/index.php/Doc:2.6/Manual/Render/Cycles/Texture_Editing%%%

%%%For Cycles it uses image texture nodes from the material. The texture shown is the active image texture node, which you can set in the node editor by clicking on that node. http://wiki.blender.org/index.php/Doc:2.6/Manual/Render/Cycles/Texture_Editing%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Author
Member

%%%sorry, that i didn't know.
question, if the cycles material for an object has only one "Image Texture" node, is it possible to use that for "Texture" viewport shading mode by default?
currently i have first go to the "Image Texture" node and have to select it by hand, even when it is the only "Image Texture" node in the objects material node system.

in my attached blend file all materials of the objects contains only one "Image Texture" node, that i have to select first by hand - is that really necessary ?
i mean it is in this situation very clear, what texture has to be viewed in the "Texture" shading mode.

(i don't know if this report is visible, when it has the status "Closed")
%%%

%%%sorry, that i didn't know. question, if the cycles material for an object has only one "Image Texture" node, is it possible to use that for "Texture" viewport shading mode by default? currently i have first go to the "Image Texture" node and have to select it by hand, even when it is the only "Image Texture" node in the objects material node system. in my attached blend file all materials of the objects contains only one "Image Texture" node, that i have to select first by hand - is that really necessary ? i mean it is in this situation very clear, what texture has to be viewed in the "Texture" shading mode. (i don't know if this report is visible, when it has the status "Closed") %%%

%%%Ok, I've made it show the texture now in this case, even if it's not active. That's in svn revision 59740.%%%

%%%Ok, I've made it show the texture now in this case, even if it's not active. That's in svn revision 59740.%%%
Author
Member

%%%thank you very much!%%%

%%%thank you very much!%%%

Added subscriber: @RomboutVersluijs

Added subscriber: @RomboutVersluijs

Is it possible to also link the texture in the uv editor to the selected material or uv attribute. I really miss this option / function which BI had. I find the UV edit workspace a bit useless as it is. In edit mode viewport does not update currently so i need to switch object mode all the time. The refresh rate of the viewport is some what sluggish compared to 2.79.

Also why does solid mode have a texture shading option as this doesnt seem to work. Isnt this something which was from BI engine?

Screen Shot 2018-11-30 at 22.12.45.png

When im in cycles and go to lookdev the uv texture is all mangled up, see above.

Than i need to move the uv's and then it refreshes in the viewport. But it doesnt show the transform im doing. This only shows when i go back into object mode.

In Cycles or EEVEE the object look complete wacko in edit mode when i switch as well.

Screen Shot 2018-11-30 at 22.15.36.png

After moving it shows properly.

Screen Shot 2018-11-30 at 22.19.22.png

osx
bl 2.80.0 #26d5a3625ed

Is it possible to also link the texture in the uv editor to the selected material or uv attribute. I really miss this option / function which BI had. I find the UV edit workspace a bit useless as it is. In edit mode viewport does not update currently so i need to switch object mode all the time. The refresh rate of the viewport is some what sluggish compared to 2.79. Also why does solid mode have a texture shading option as this doesnt seem to work. Isnt this something which was from BI engine? ![Screen Shot 2018-11-30 at 22.12.45.png](https://archive.blender.org/developer/F5774632/Screen_Shot_2018-11-30_at_22.12.45.png) When im in cycles and go to lookdev the uv texture is all mangled up, see above. Than i need to move the uv's and then it refreshes in the viewport. But it doesnt show the transform im doing. This only shows when i go back into object mode. In Cycles or EEVEE the object look complete wacko in edit mode when i switch as well. ![Screen Shot 2018-11-30 at 22.15.36.png](https://archive.blender.org/developer/F5774656/Screen_Shot_2018-11-30_at_22.15.36.png) After moving it shows properly. ![Screen Shot 2018-11-30 at 22.19.22.png](https://archive.blender.org/developer/F5774659/Screen_Shot_2018-11-30_at_22.19.22.png) osx bl 2.80.0 #26d5a3625ed
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36632
No description provided.