Related to #36632: cycles textured draw mode now shows the image from an image texture node even if it's not active, in case there is no active texture node.