source/blender/nodes/shader/node_shader_util.c
@@ -195,25 +195,28 @@ static void data_from_gpu_stack_list(ListBase *sockets, bNodeStack **ns, GPUNode
 bNode *nodeGetActiveTexture(bNodeTree *ntree)
 {
 	/* this is the node we texture paint and draw in textured draw */
-	bNode *node, *tnode;
+	bNode *node, *tnode, *inactivenode = NULL;
 
 	if (!ntree)
 		return NULL;
 
-	for (node = ntree->nodes.first; node; node = node->next)
+	for (node = ntree->nodes.first; node; node = node->next) {
 		if (node->flag & NODE_ACTIVE_TEXTURE)
 			return node;
+		else if (!inactivenode && node->typeinfo->nclass == NODE_CLASS_TEXTURE)
+			inactivenode = node;
+	}
 	
 	/* node active texture node in this tree, look inside groups */
 	for (node = ntree->nodes.first; node; node = node->next) {
 		if (node->type == NODE_GROUP) {
 			tnode = nodeGetActiveTexture((bNodeTree *)node->id);
-			if (tnode)
+			if (tnode && ((tnode->flag & NODE_ACTIVE_TEXTURE) || !inactivenode))
 				return tnode;
 		}
 	}
 	
-	return NULL;
+	return inactivenode;
 }
 
 void ntreeExecGPUNodes(bNodeTreeExec *exec, GPUMaterial *mat, int do_outputs)
